FIX: Bugs (android unable to send requests)